# audio-metadata-parser

./: Cargo.toml  LICENSE  Makefile  README.md
docs/: README_FLAC.md  README_ID3.md  README_OGG.md
src/: base64.rs  flac.rs  id3.rs  lib.rs  ogg.rs  reader.rs  utils.rs  vorbis_comment.rs
wasm-binding/: Cargo.toml
wasm-binding/src/: lib.rs
