[package]
name = "ptdgrp-audmetap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["wasm-binding"]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

